--- a/service.yaml
+++ b/service.yaml
@@ -1,41 +1,44 @@
----
-openapi: "3.0.1"
+openapi: 3.0.1
 info:
-  title: "Contract for the petstore service"
-  version: "1"
+  title: Contract for the petstore service
+  version: '1'
 paths:
   /pets/{petid}:
     get:
-      summary: "Should be able to get a pet by petId"
+      summary: Should be able to get a pet by petId
       parameters:
-        - name: "petid"
-          in: "path"
+        - name: petid
+          in: path
           required: true
           schema:
-            type: "number"
+            type: number
           examples:
-            200_OKAY:
+            SCOOBY_200_OK:
               value: 1
       responses:
-        "200":
-          description: "Should be able to get a pet by petId"
+        '200':
+          description: Should be able to get a pet by petId
           content:
             application/json:
               schema:
                 required:
-                  - "id"
-                  - "name"
-                  - "status"
-                  - "type"
+                  - id
+                  - name
+                  - status
+                  - type
                 properties:
                   id:
-                    type: "number"
+                    type: number
                   name:
-                    type: "string"
+                    type: string
                   type:
-                    type: "string"
+                    type: string
                   status:
-                    type: "number"
+                    type: string
               examples:
-                200_OKAY:
-                  value: '{any}'
+                SCOOBY_200_OK:
+                  value:
+                    id: 1
+                    name: Scooby
+                    type: Golden Retriever
+                    status: Adopted
